Update Code AI and Innovation.ipynb

--- a/Code AI and Innovation.ipynb
+++ b/Code AI and Innovation.ipynb
@@ -152,7 +152,7 @@
         "    # ensure targets exist\n",
         "    if 'poll_lens' not in df.columns or 'poll_pw' not in df.columns:\n",
         "        return None\n",
-        "    # Clip targets to [0,100] (user confirmed CSV already 0-100)\n",
+        "    # Clip targets to [0,100]\n",
         "    df['poll_lens'] = pd.to_numeric(df['poll_lens'], errors='coerce').clip(0,100)\n",
         "    df['poll_pw']   = pd.to_numeric(df['poll_pw'], errors='coerce').clip(0,100)\n",
         "\n",
