Update Code AI and Innovation.ipynb

--- a/Code AI and Innovation.ipynb
+++ b/Code AI and Innovation.ipynb
@@ -738,7 +738,7 @@
         "\n",
         "if best_state is not None:\n",
         "    model_final.load_state_dict(best_state)\n",
-        "torch.save(model_final.state_dict(), os.path.join(MODEL_DIR, \"tcn_final_optionB_cleaned.pth\"))\n",
+        "torch.save(model_final.state_dict(), os.path.join(MODEL_DIR, \"tcn_final_cleaned.pth\"))\n",
         "\n",
         "# Final evaluation\n",
         "preds = []; trues = []\n",
